Fix overlap of loading placeholder on safari

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -290,6 +290,7 @@
 
             video {
               width: 100%;
+              z-index: 1;
             }
           }
         }
